--- a/src/Components/styles/Nav.module.css
+++ b/src/Components/styles/Nav.module.css
@@ -2,12 +2,47 @@
 .navContainer {
     width: 100%;
     height: 90px;
-    left: calc(50% - 1440px/2);
+    left:0px;
     top: 0px;
     background-color: #00b992;
+
+    /* display: flex;
+    align-items: center; */
 }
 
-.logo {
-    width: 229px;
-    left: 107px;
+/* Logo */
+.logo_container {
+    position: absolute;
+    left: 100px;
+    height: inherit;
+
+    display: flex;
+    align-items: center;
+}
+.logo_container img {
+    /* width: 15%; */
+    width: 230px;
+    left: 100px;
+}
+
+/* Nav Links */
+.nav_links_container {
+    position: absolute;
+    left: 400px;
+    height: inherit;
+
+    display: flex;
+    align-items: center;
+}
+.nav_links_container > a {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #fff;
+
+    font-family: 'Do Hyeon', sans-serif;
+    font-size: 24px;
+    font-weight: 500;
+    padding: 0 20px;
+    transition: all 0.3s ease;
 }
