--- a/src/Components/styles/Nav.module.css
+++ b/src/Components/styles/Nav.module.css
@@ -1,13 +1,10 @@
-
+/* Container */
 .navContainer {
     width: 100%;
     height: 90px;
     left:0px;
     top: 0px;
     background-color: #00b992;
-
-    /* display: flex;
-    align-items: center; */
 }
 
 /* Logo */
