--- a/src/Pages/Home/styles/Home.module.css
+++ b/src/Pages/Home/styles/Home.module.css
@@ -1,3 +1,9 @@
 .home_container {
     display: flex;
+
+    position: relative;
+    width: 1440px;
+    height: 1024px;
+
+    background-color: white;
 }
