--- a/src/Components/styles/Nav.module.css
+++ b/src/Components/styles/Nav.module.css
@@ -1,10 +1,12 @@
 /* Container */
 .navContainer {
-    width: 100%;
+    /* width: 100vw; */
     height: 90px;
     left:0px;
     top: 0px;
+
     background-color: #00b992;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
 }
 
 /* Logo */
