--- a/src/Pages/Home/styles/Home.module.css
+++ b/src/Pages/Home/styles/Home.module.css
@@ -1,9 +1,8 @@
 .home_container {
-    display: flex;
-
     position: relative;
-    width: 1440px;
-    height: 1024px;
+
+    /* shadow만큼 내려오기 */
+    top: 10px;
 
     background-color: white;
 }
