--- a/src/Pages/Home/styles/Home.module.css
+++ b/src/Pages/Home/styles/Home.module.css
@@ -6,3 +6,75 @@
 
     background-color: white;
 }
+
+.contents {
+    width: 1100px;
+
+    font-family: 'Montserrat';
+    font-style: normal;
+
+    letter-spacing: 0.2px;
+
+    padding: 50px;
+    margin: 0 auto;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.text {
+    font-family: 'Montserrat';
+    font-style: normal;
+    
+    margin: 10px;
+}
+
+.main_img {
+    background-size: cover;
+    width: 100%;
+    height: auto;
+
+    margin: 0 auto;
+}
+
+.card_wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.card {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 20px 10px;
+    gap: 20px;
+
+    width: 220px;
+    height: 301px;
+
+    background: white;
+
+    box-shadow: 0px 13px 19px rgba(0, 0, 0, 0.07);
+
+    margin: 10px;
+}
+
+.card_img {
+    width: 200px;
+    height: auto;
+
+    margin: 0 auto;
+}
+
+h2 {
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 20px;
+    /* or 67% */
+
+    letter-spacing: 0.2px;
+
+    color: #00B992;
+}
