--- a/src/Pages/Home/styles/Home.module.css
+++ b/src/Pages/Home/styles/Home.module.css
@@ -30,8 +30,10 @@
 }
 
 .main_img {
+    display: flex;
+
     background-size: cover;
-    width: 100%;
+    width: 50%;
     height: auto;
 
     margin: 0 auto;
