nav 수정 및 management 파일 추가

--- a/src/Components/styles/Nav.module.css
+++ b/src/Components/styles/Nav.module.css
@@ -27,7 +27,7 @@
 /* Nav Links */
 .nav_links_container {
     position: absolute;
-    left: 400px;
+    right: 200px;
     height: inherit;
 
     display: flex;
