--- a/src/Components/about/AboutContent_style.css
+++ b/src/Components/about/AboutContent_style.css
@@ -1,15 +1,8 @@
-.about_content_wrapper{
-    width:100%;
-    margin: 0 auto;
-    display:flex;
-    flex-direction:column;
-    align-items: center;
-    margin-top: 10px;
-}
+
 .about_content{
     position:relative;
     text-align: left;
-    right:250px;
+    margin: auto;
     font-family: 'Montserrat';
     font-style: normal;
     top:40px;
