--- a/src/Components/title/title_style.css
+++ b/src/Components/title/title_style.css
@@ -1,9 +1,9 @@
 .content{
-    position:relative;
+    display: block;
     text-align: center;
     font-family: 'Montserrat';
     font-style: normal;
-    top:40px;
+    margin:40px;
     font-size: 40px;
     line-height: 20px;
     font-weight: 700;
