Activity & 배너 요청사항 반영 2
1. 배너 반응형+ 간격 임의 조정
2. activity 반응형 및 요청사항 반영( 다만 card의 정렬이 완벽하지 못함)

--- a/src/Pages/Activity/styles/Activity.module.css
+++ b/src/Pages/Activity/styles/Activity.module.css
@@ -6,10 +6,10 @@
 
 
 .arrow {
-    width: 50px;
-    height: 2px;
+    width: 3vw; /* 상대적인 너비 설정 */
+    height: 0.2vw; /* 상대적인 높이 설정 */
     background-color: seagreen;
-    margin: 3px;
+    margin: 0.3vw; /* 상대적인 여백 설정 */
 }
 
 
