--- a/src/Pages/Home/styles/Home.module.css
+++ b/src/Pages/Home/styles/Home.module.css
@@ -5,6 +5,9 @@
     top: 10px;
 
     background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .contents {
@@ -25,16 +28,18 @@
 .text {
     font-family: 'Montserrat';
     font-style: normal;
+    font-weight: 600;
     font-size: 20px;
     margin: 30px;
     text-align: center;
+    white-space: pre-line;
 }
 
 .main_img {
     display: flex;
 
     background-size: cover;
-    width: 50%;
+    width: 100%;
     height: auto;
 
     margin: 0 auto;
@@ -71,17 +76,18 @@
     margin: 0 auto;
 }
 
-h2 {
-    margin-left:20px;
-    color: #00B992 ;
-    font-weight: 700;
+.title {
+    margin-top:50px;
+    margin-bottom: 40px;
+    font-weight: 900;
     font-size: 30px;
     line-height: 20px;
     /* or 67% */
 
     letter-spacing: 0.2px;
-
-
+    text-align: center;
+    color: #00B992;
+    
 }
 
 .aboutHover:hover{
